# sec-filing-intelligence

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_full.md  CLAUDE.md  DESIGN.md  DEVIATIONS.md  EXERCISE.md  MEASUREMENTS.md  README.md  pyproject.toml
.claude/: settings.local.json
benchmark/: benchmark.skeleton.yaml  benchmark.yaml
benchmark/reports/: run-20260714T025625Z.json  run-20260714T025948Z.json
src/sfi/: cli.py
src/sfi/bench/: runner.py  score.py  xbrl_spotcheck.py
src/sfi/common/: config.py  edgar.py  models.py  periods.py  text.py
src/sfi/concepts/: concepts.yaml  dictionary.py
src/sfi/ingest/: accept.py  extract.py  manifest.py  run.py  segment.py
src/sfi/llm/: client.py
src/sfi/measure/: llm_arithmetic.py
src/sfi/query/: compose.py  compute.py  evidence.py  pipeline.py  plan.py  resolve.py  retrieve.py  types.py
src/sfi/store/: db.py  schema.sql
tests/bench/: test_score.py
tests/common/: test_config.py  test_edgar.py  test_periods.py  test_text.py
tests/concepts/: test_dictionary.py
tests/fixtures/: segmentation_truth.csv
tests/ingest/: test_accept.py  test_manifest.py  test_segment.py  test_segment_truth.py
tests/query/: test_query.py
tests/store/: test_schema.py
