[project]
name = "sfi"
version = "0.1.0"
description = "SEC Filing Intelligence — grounded Q&A over 10-K/10-Q PDFs"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
]

[project.scripts]
sfi = "sfi.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]
# P1-only optional group (J4): torch ~2 GB, so P0 never installs it.
prose = ["sentence-transformers>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
